remove some uses of default List methods